--- a/assets/sass/_page.scss
+++ b/assets/sass/_page.scss
@@ -15,10 +15,10 @@
 	border: 0;
 	background-color: transparent;
 	cursor: pointer;
-	animation-name: rotateIn;
-	animation-delay: 500ms;
-	animation-duration: 1500ms;
-	animation-fill-mode: both;
+	// animation-name: rotateIn;
+	// animation-delay: 500ms;
+	// animation-duration: 1500ms;
+	// animation-fill-mode: both;
 
 	@media (min-width: 600px) {
 		bottom: 2rem;
