--- a/assets/sass/_modal.scss
+++ b/assets/sass/_modal.scss
@@ -12,16 +12,14 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: rgba(0, 0, 0, 0.7);
+	background-color: rgba(0, 0, 0, 0.9);
 }
 
 .modal-container {
-	max-width: 420px;
+	max-width: 500px;
 	max-height: 100vh;
-	padding: 30px;
 	overflow-y: auto;
-	background-color: rgba(255, 255, 255, 0.9);
-	border-radius: 4px;
+	color: #fff;
 }
 
 .modal-close {
@@ -83,6 +81,21 @@
 	}
 }
 
-.modal-share {
-	margin-top: 22px;
+.screenshot-tv-wrapper {
+	position: relative;
+}
+
+.screenshot-tv-frame {
+	position: relative;
+	z-index: 1;
+}
+
+.screenshot-tv {
+	position: absolute;
+	top: 6px;
+	left: 8px;
+
+	img {
+		width: 220px;
+	}
 }
