--- a/assets/sass/_screenshot.scss
+++ b/assets/sass/_screenshot.scss
@@ -3,6 +3,11 @@
 	height: 600px;
 }
 
+.screenshot-tv-wrapper {
+	width: 291px;
+	margin: 0 auto;
+}
+
 .screenshot {
 	position: relative;
 	z-index: -1;
