--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -517,6 +517,11 @@ html {
   height: 600px;
 }
 
+.screenshot-tv-wrapper {
+  width: 291px;
+  margin: 0 auto;
+}
+
 .screenshot {
   position: relative;
   z-index: -1;
@@ -589,27 +594,50 @@ html {
   z-index: 2;
 }
 
+.modal h1 {
+  margin-top: 1rem;
+  color: #1af3bf;
+  font-family: 'Futura Bold', sans-serif;
+  font-size: 1.4375rem;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.modal h1 span {
+  display: block;
+}
+
+.modal h1 .line1 {
+  font-size: 3.125rem;
+  letter-spacing: -0.0625rem;
+}
+
+.modal h1 .line2 {
+  letter-spacing: 0.0625rem;
+}
+
 .modal-overlay {
   position: fixed;
   top: 0;
-  left: 0;
   right: 0;
   bottom: 0;
+  left: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background-color: rgba(0, 0, 0, 0.9);
 }
 
 .modal-container {
   max-width: 500px;
   max-height: 100vh;
+  padding: 2rem;
   overflow-y: auto;
   color: #fff;
 }
@@ -619,8 +647,8 @@ html {
   top: 0;
   right: 0;
   display: block;
-  height: 44px;
   width: 44px;
+  height: 44px;
   padding: 0;
   border: 0;
   background: transparent;
